# Furry-Badges

./: .gitignore  .gitlab-ci.yml  Procfile  README.md  app.php  app.py  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: logo-request.yml
