[tool.poetry]
name = "furry-badges"
version = "1.0.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "3.10.1"
fastapi = "^0.72.0"
requests = "^2.27.1"
uvicorn = "^0.17.0"
orjson = "^3.6.5"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
