[tool.poetry]
name = "furry-badges"
version = "1.0.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
requests = "^2.30.0"
uvicorn = "^0.22.0"
orjson = "^3.8.12"
Jinja2 = "3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
